Did some changes to the code n added logout function in auth.js
